[metadata]
name = pipeline_gazprom_infotech
version = 1.0
author = Vitaly Bogomolov
author_email = mail@vitaly-bogomolov.ru
description = Library for making infotech.xml files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vb64/pipeline.gazprom.infotech
project_urls =
    Bug Tracker = https://github.com/vb64/pipeline.gazprom.infotech/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = pipeline_gazprom_infotech
python_requires = >=3.6
include_package_data=True
install_requires = 
    lxml==5.3.0
